{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 1306,
  "lineage": "a4e159c4-c4ea-614f-c0f3-ba1436d67466",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "splunk_idx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:531862373039:instance/i-0ea97d47ce41d372c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea97d47ce41d372c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07a3dc3b83788dfa7",
            "private_dns": "ip-10-0-1-192.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.192",
            "public_ip": "54.174.218.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09f84f2377e8a66ca",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd5447717b45c78b",
            "tags": {
              "Name": "indexer-cluster-001"
            },
            "tags_all": {
              "Name": "indexer-cluster-001"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093b25e800a9014dd"
            ]
          },
          "dependencies": [
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_subnet.splunk_subnet_b",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:531862373039:instance/i-01c071e499dea4038",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c071e499dea4038",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0526f58961591aab3",
            "private_dns": "ip-10-0-2-176.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.176",
            "public_ip": "3.239.206.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a410d4487a5accfe",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c403876254bf27f",
            "tags": {
              "Name": "indexer-cluster-001"
            },
            "tags_all": {
              "Name": "indexer-cluster-001"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093b25e800a9014dd"
            ]
          },
          "dependencies": [
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_subnet.splunk_subnet_b",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:531862373039:instance/i-0b3553275425010f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3553275425010f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c5cd23cded5827d",
            "private_dns": "ip-10-0-3-210.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.210",
            "public_ip": "3.86.116.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ccbbe7087d1748f3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03752dc72376fd759",
            "tags": {
              "Name": "indexer-cluster-001"
            },
            "tags_all": {
              "Name": "indexer-cluster-001"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093b25e800a9014dd"
            ]
          },
          "dependencies": [
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_subnet.splunk_subnet_b",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "splunk_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:531862373039:instance/i-0e7e40d95f48b070f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7e40d95f48b070f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fe7473cde5396201",
            "private_dns": "ip-10-0-1-56.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.56",
            "public_ip": "54.162.85.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c841bc3012214bc",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd5447717b45c78b",
            "tags": {
              "Name": "splunk_manager-cluster-001"
            },
            "tags_all": {
              "Name": "splunk_manager-cluster-001"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093b25e800a9014dd"
            ]
          },
          "dependencies": [
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "splunk_sh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:531862373039:instance/i-064b49e5df4c0bff6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064b49e5df4c0bff6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-064a84298126511b7",
            "private_dns": "ip-10-0-1-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.238",
            "public_ip": "3.81.124.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b06f32433a7adb9c",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dd5447717b45c78b",
            "tags": {
              "Name": "sh-cluster-001"
            },
            "tags_all": {
              "Name": "sh-cluster-001"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093b25e800a9014dd"
            ]
          },
          "dependencies": [
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_subnet.splunk_subnet_b",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:531862373039:instance/i-0b07e25c3b7eda614",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b07e25c3b7eda614",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08720052383fd7a44",
            "private_dns": "ip-10-0-2-26.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.26",
            "public_ip": "3.238.150.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f4e6bc4553a8ea6",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04c403876254bf27f",
            "tags": {
              "Name": "sh-cluster-001"
            },
            "tags_all": {
              "Name": "sh-cluster-001"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093b25e800a9014dd"
            ]
          },
          "dependencies": [
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_subnet.splunk_subnet_b",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:531862373039:instance/i-0d274b5049bf791ba",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d274b5049bf791ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0044a3827e82b664b",
            "private_dns": "ip-10-0-3-36.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.36",
            "public_ip": "3.95.168.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c5c8515c9c819db",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03752dc72376fd759",
            "tags": {
              "Name": "sh-cluster-001"
            },
            "tags_all": {
              "Name": "sh-cluster-001"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-093b25e800a9014dd"
            ]
          },
          "dependencies": [
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_subnet.splunk_subnet_b",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "splunk_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531862373039:internet-gateway/igw-0766cf28ec93108ce",
            "id": "igw-0766cf28ec93108ce",
            "owner_id": "531862373039",
            "tags": {
              "Name": "splunk_igw"
            },
            "tags_all": {
              "Name": "splunk_igw"
            },
            "vpc_id": "vpc-07e1a4472a90e3a6d"
          },
          "dependencies": [
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "splunk_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:531862373039:loadbalancer/app/splunk-sh-dev-routed-alb/61a05462e65ace05",
            "arn_suffix": "app/splunk-sh-dev-routed-alb/61a05462e65ace05",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "splunk-sh-dev-routed-alb-1956799282.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:531862373039:loadbalancer/app/splunk-sh-dev-routed-alb/61a05462e65ace05",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "splunk-sh-dev-routed-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-093b25e800a9014dd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03752dc72376fd759"
              },
              {
                "subnet_id": "subnet-04c403876254bf27f"
              },
              {
                "subnet_id": "subnet-0dd5447717b45c78b"
              }
            ],
            "subnets": [
              "subnet-03752dc72376fd759",
              "subnet-04c403876254bf27f",
              "subnet-0dd5447717b45c78b"
            ],
            "vpc_id": "vpc-07e1a4472a90e3a6d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_subnet.splunk_subnet_b",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "splunk_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:531862373039:listener/app/splunk-sh-dev-routed-alb/61a05462e65ace05/fd1394ad736f7036",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:531862373039:targetgroup/splunk-sh-dev-routed-tg/e9385d2f9139d3e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:531862373039:listener/app/splunk-sh-dev-routed-alb/61a05462e65ace05/fd1394ad736f7036",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:531862373039:loadbalancer/app/splunk-sh-dev-routed-alb/61a05462e65ace05",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.splunk_lb",
            "aws_lb_target_group.splunk_tg",
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_subnet.splunk_subnet_b",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "splunk_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:531862373039:targetgroup/splunk-sh-dev-routed-tg/e9385d2f9139d3e4",
            "arn_suffix": "targetgroup/splunk-sh-dev-routed-tg/e9385d2f9139d3e4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:531862373039:targetgroup/splunk-sh-dev-routed-tg/e9385d2f9139d3e4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "splunk-sh-dev-routed-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07e1a4472a90e3a6d"
          },
          "dependencies": [
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "splunk_sh_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:531862373039:targetgroup/splunk-sh-dev-routed-tg/e9385d2f9139d3e4-20241031221304479800000009",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:531862373039:targetgroup/splunk-sh-dev-routed-tg/e9385d2f9139d3e4",
            "target_id": "i-064b49e5df4c0bff6"
          },
          "dependencies": [
            "aws_instance.splunk_sh",
            "aws_lb_target_group.splunk_tg",
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_subnet.splunk_subnet_b",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:531862373039:targetgroup/splunk-sh-dev-routed-tg/e9385d2f9139d3e4-2024103122130489380000000a",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:531862373039:targetgroup/splunk-sh-dev-routed-tg/e9385d2f9139d3e4",
            "target_id": "i-0b07e25c3b7eda614"
          },
          "dependencies": [
            "aws_instance.splunk_sh",
            "aws_lb_target_group.splunk_tg",
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_subnet.splunk_subnet_b",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:531862373039:targetgroup/splunk-sh-dev-routed-tg/e9385d2f9139d3e4-2024103122130497910000000b",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:531862373039:targetgroup/splunk-sh-dev-routed-tg/e9385d2f9139d3e4",
            "target_id": "i-0d274b5049bf791ba"
          },
          "dependencies": [
            "aws_instance.splunk_sh",
            "aws_lb_target_group.splunk_tg",
            "aws_security_group.splunk_sg",
            "aws_subnet.splunk_subnet_a",
            "aws_subnet.splunk_subnet_b",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "splunk_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531862373039:route-table/rtb-09a536e78d66b0c4e",
            "id": "rtb-09a536e78d66b0c4e",
            "owner_id": "531862373039",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0766cf28ec93108ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "splunk_route_table"
            },
            "tags_all": {
              "Name": "splunk_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e1a4472a90e3a6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.splunk_igw",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "splunk_subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074493a8805072aa1",
            "route_table_id": "rtb-09a536e78d66b0c4e",
            "subnet_id": "subnet-0dd5447717b45c78b"
          },
          "dependencies": [
            "aws_internet_gateway.splunk_igw",
            "aws_route_table.splunk_route_table",
            "aws_subnet.splunk_subnet_a",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "splunk_subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062d6e7204093c628",
            "route_table_id": "rtb-09a536e78d66b0c4e",
            "subnet_id": "subnet-04c403876254bf27f"
          },
          "dependencies": [
            "aws_internet_gateway.splunk_igw",
            "aws_route_table.splunk_route_table",
            "aws_subnet.splunk_subnet_b",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "splunk_subnet_c_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2017c724fb2704e",
            "route_table_id": "rtb-09a536e78d66b0c4e",
            "subnet_id": "subnet-03752dc72376fd759"
          },
          "dependencies": [
            "aws_internet_gateway.splunk_igw",
            "aws_route_table.splunk_route_table",
            "aws_subnet.splunk_subnet_c",
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "splunk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531862373039:security-group/sg-093b25e800a9014dd",
            "description": "Allow Splunk traffic, SSH, HTTP, HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093b25e800a9014dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8088
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "splunk_sg",
            "name_prefix": "",
            "owner_id": "531862373039",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07e1a4472a90e3a6d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "splunk_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531862373039:subnet/subnet-0dd5447717b45c78b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd5447717b45c78b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531862373039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_aza"
            },
            "tags_all": {
              "Name": "subnet_aza"
            },
            "vpc_id": "vpc-07e1a4472a90e3a6d"
          },
          "dependencies": [
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "splunk_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531862373039:subnet/subnet-04c403876254bf27f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c403876254bf27f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531862373039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_azb"
            },
            "tags_all": {
              "Name": "subnet_azb"
            },
            "vpc_id": "vpc-07e1a4472a90e3a6d"
          },
          "dependencies": [
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "splunk_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531862373039:subnet/subnet-03752dc72376fd759",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03752dc72376fd759",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "531862373039",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_azc"
            },
            "tags_all": {
              "Name": "subnet_azc"
            },
            "vpc_id": "vpc-07e1a4472a90e3a6d"
          },
          "dependencies": [
            "aws_vpc.splunk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "splunk_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:531862373039:vpc/vpc-07e1a4472a90e3a6d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-088e889ee016c790f",
            "default_route_table_id": "rtb-0263b7f62b5b81067",
            "default_security_group_id": "sg-0efbeea008ae4d8ae",
            "dhcp_options_id": "dopt-011f714f5f0f46ee4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e1a4472a90e3a6d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0263b7f62b5b81067",
            "owner_id": "531862373039",
            "tags": {
              "Name": "splunk_vpc"
            },
            "tags_all": {
              "Name": "splunk_vpc"
            }
          }
        }
      ]
    }
  ]
}